syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "blog"
};

message Blog {
  string id = 1;
  string authorId = 2;
  string title = 3;
  string content = 4;
}

message ProtoString {
  string id = 1;
}

service BlogService {
  rpc CreateBlog (Blog) returns (Blog) {};
  rpc ReadBlog (ProtoString) returns (Blog) {};
}